Workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:33:07 **** Build of configuration Debug for project AutoDriving ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -c -x assembler-with-cpp --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f401retx.o" "../Startup/startup_stm32f401retx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'main':
../Src/main.c:12:2: warning: implicit declaration of function 'HAL_Init' [-Wimplicit-function-declaration]
  HAL_Init();
  ^~~~~~~~
arm-none-eabi-g++ -o "AutoDriving.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\Dongjin\Documents\GitHub\AutoDriving\Workspace\AutoDriving\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="AutoDriving.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
Src/main.o: In function `main':
C:/Users/Dongjin/Documents/GitHub/AutoDriving/Workspace/AutoDriving/Debug/../Src/main.c:12: undefined reference to `HAL_Init'
collect2.exe: error: ld returned 1 exit status
make: *** [makefile:55: AutoDriving.elf] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
23:35:19 **** Incremental Build of configuration Debug for project AutoDriving ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-g++ -o "AutoDriving.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\Dongjin\Documents\GitHub\AutoDriving\Workspace\AutoDriving\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="AutoDriving.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
Finished building target: AutoDriving.elf
 
arm-none-eabi-size   AutoDriving.elf 
arm-none-eabi-objdump -h -S  AutoDriving.elf  > "AutoDriving.list"
   text	   data	    bss	    dec	    hex	filename
    656	      8	   1568	   2232	    8b8	AutoDriving.elf
Finished building: default.size.stdout
 
Finished building: AutoDriving.list
 
23:39:56 **** Incremental Build of configuration Debug for project AutoDriving ****
make -j8 all 
arm-none-eabi-g++ "../Inc/RCC/RCC_Init.cpp" -mcpu=cortex-m4 -std=gnu++14 -g3 -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-threadsafe-statics -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Inc/RCC/RCC_Init.d" -MT"Inc/RCC/RCC_Init.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Inc/RCC/RCC_Init.o"
../Inc/RCC/RCC_Init.cpp: In function 'void RCC_Init()':
../Inc/RCC/RCC_Init.cpp:10:2: error: 'PLLI2SON' was not declared in this scope
  PLLI2SON |= ENABLE;
  ^~~~~~~~
make: *** [Inc/RCC/subdir.mk:18: Inc/RCC/RCC_Init.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
23:39:58 **** Incremental Build of configuration Debug for project AutoDriving ****
make -j8 all 
arm-none-eabi-g++ "../Inc/RCC/RCC_Init.cpp" -mcpu=cortex-m4 -std=gnu++14 -g3 -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-threadsafe-statics -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Inc/RCC/RCC_Init.d" -MT"Inc/RCC/RCC_Init.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Inc/RCC/RCC_Init.o"
../Inc/RCC/RCC_Init.cpp: In function 'void RCC_Init()':
../Inc/RCC/RCC_Init.cpp:10:2: error: 'PLLI2SON' was not declared in this scope
  PLLI2SON |= ENABLE;
  ^~~~~~~~
make: *** [Inc/RCC/subdir.mk:18: Inc/RCC/RCC_Init.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
